# ppt_generator

./: .gitignore  app.py  main.py  pyproject.toml  requirements.txt  run.command
.streamlit/: config.toml  pages.toml
PPT/: 20251219_190338.pptx  20251221_094129.pptx
css/: wide.css
pages/: 1_search_lyrics.py  2_ppt_generator.py  3_youtube_bpm_code.py
service/: ffmpeg_function.py  function.py  streamlit_function.py
source/: lyrics.py
test/: test.ipynb
